--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "@electron-forge/plugin-webpack": "6.0.0-beta.61",
     "@electron-forge/publisher-github": "^6.0.0-beta.61",
     "@imxeno/electron-forge-maker-nsis": "^6.0.1",
+    "@octokit/webhooks-types": "^4.15.0",
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
+    "@types/semver": "^7.3.9",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vercel/webpack-asset-relocator-loader": "1.7.0",
@@ -79,6 +81,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-fast-marquee": "^1.2.1",
+    "semver": "^7.3.5",
     "url": "^0.11.0"
   }
 }
