--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "dts-css-modules-loader": "^1.2.4",
     "electron": "16.0.1",
     "electron-devtools-installer": "^3.2.0",
+    "esbuild-loader": "^2.16.0",
     "eslint": "^8.2.0",
     "eslint-plugin-import": "^2.25.3",
     "fork-ts-checker-webpack-plugin": "^6.4.0",
