--- a/.stylelintrc
+++ b/.stylelintrc
@@ -277,7 +277,7 @@
     "selector-type-no-unknown": [
       true,
       {
-        "ignoreTypes": ["from"]
+        "ignoreTypes": ["from", "webview"]
       }
     ],
     "property-no-unknown": [
