--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@electron-forge/publisher-github": "^6.0.0-beta.61",
     "@imxeno/electron-forge-maker-nsis": "^6.0.1",
     "@octokit/webhooks-types": "^4.15.0",
+    "@types/pinyin": "^2.10.0",
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
     "@types/semver": "^7.3.9",
@@ -61,6 +62,7 @@
     "stylelint": "^14.1.0",
     "stylelint-config-standard": "^24.0.0",
     "stylelint-order": "^5.0.0",
+    "to-string-loader": "^1.2.0",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.2"
   },
@@ -79,6 +81,7 @@
     "mobx-react": "^7.2.1",
     "p-queue": "^7.1.0",
     "path": "^0.12.7",
+    "pinyin": "^2.10.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-fast-marquee": "^1.2.1",
