--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,8 +24,19 @@ jobs:
         with:
           node-version: 16.x
 
+      - name: Cache pnpm modules
+        uses: actions/cache@v2
+        with:
+          path: ~/.pnpm-store
+          key: ${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-
+
       - name: Install Dependencies
-        run: yarn install
+        uses: pnpm/action-setup@v2.0.1
+        with:
+          version: 6.23.2
+          run_install: true
 
       - name: Publish
         run: npm run publish
