--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "node scripts/build.js",
     "watch": "node scripts/watch.js",
     "update-electron-vendors": "node scripts/update-electron-vendors.js",
-    "postinstall": "npm run update-electron-vendors"
+    "postinstall": "npm run update-electron-vendors",
+    "precompile": "cross-env MODE=production npm run build",
+    "compile": "electron-builder build --config electron-builder.config.js"
   },
   "repository": {
     "type": "git",
@@ -35,7 +37,7 @@
   "browserslist": [
     "Chrome 96"
   ],
-  "homepage": "https://github.com/baranwang/pia-player#readme",
+  "homepage": "https://pia-player.baran.wang",
   "devDependencies": {
     "@guanghechen/postcss-modules-dts": "^1.8.5",
     "@types/react": "^17.0.37",
@@ -44,11 +46,14 @@
     "@typescript-eslint/parser": "^5.5.0",
     "@vitejs/plugin-react": "^1.1.0",
     "autoprefixer": "^10.4.0",
+    "cross-env": "^7.0.3",
     "electron": "^16.0.4",
+    "electron-builder": "^22.14.5",
     "electron-devtools-installer": "^3.2.0",
     "eslint": "^8.4.0",
     "eslint-plugin-import": "^2.25.3",
     "less": "^4.1.2",
+    "less-vars-to-js": "^1.3.0",
     "lodash-es": "^4.17.21",
     "stylelint": "^14.1.0",
     "stylelint-config-standard": "^24.0.0",
@@ -58,7 +63,7 @@
     "vite-plugin-dts": "^0.9.6"
   },
   "dependencies": {
-    "@baranwang/pinyin": "^1.2.3",
+    "@baranwang/pinyin": "^1.3.0",
     "@ffmpeg/core": "^0.10.0",
     "@ffmpeg/ffmpeg": "^0.10.1",
     "ahooks": "^2.10.14",
