--- a/packages/preload/tsconfig.json
+++ b/packages/preload/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "/@/*": ["./src/*"]
+      "/@/*": ["./src/*"],
+      "/@eventKeys": ["../eventKeys.ts"]
     }
   },
   "include": ["src/*", "../../types/**/*.d.ts"]
