--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "0.0.0",
   "productName": "PIA Player",
   "description": "Pia戏播放器",
-  "main": "packages/main/dist/index.cjs",
+  "main": "app/packages/main/dist/index.cjs",
   "scripts": {
     "build": "node scripts/build.js",
     "watch": "node scripts/watch.js",
+    "prebuild": "npm run make-package-json",
+    "make-package-json": "node scripts/make-package-json.js",
     "update-electron-vendors": "node scripts/update-electron-vendors.js",
     "postinstall": "npm run update-electron-vendors",
     "precompile": "cross-env MODE=production npm run build",
-    "compile": "electron-builder build --config electron-builder.config.js"
+    "compile": "electron-builder build -mw -c electron-builder.config.js"
   },
   "repository": {
     "type": "git",
@@ -53,8 +55,6 @@
     "eslint": "^8.4.0",
     "eslint-plugin-import": "^2.25.3",
     "less": "^4.1.2",
-    "less-vars-to-js": "^1.3.0",
-    "lodash-es": "^4.17.21",
     "stylelint": "^14.1.0",
     "stylelint-config-standard": "^24.0.0",
     "stylelint-order": "^5.0.0",
@@ -63,7 +63,7 @@
     "vite-plugin-dts": "^0.9.6"
   },
   "dependencies": {
-    "@baranwang/pinyin": "^1.3.0",
+    "@baranwang/pinyin": "^1.4.0",
     "@ffmpeg/core": "^0.10.0",
     "@ffmpeg/ffmpeg": "^0.10.1",
     "ahooks": "^2.10.14",
@@ -71,6 +71,7 @@
     "classnames": "^2.3.1",
     "dexie": "^3.2.0",
     "electron-log": "^4.4.1",
+    "electron-updater": "^4.6.1",
     "mobx": "^6.3.8",
     "mobx-react": "^7.2.1",
     "node-fetch": "^3.1.0",
