--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,8 @@
 name: Build And Release
 
 on:
-  push:
-    tags: ['v*.*.*']
+  release:
+    types: [created]
 
 permissions:
   contents: write
@@ -18,7 +18,7 @@ jobs:
         with:
           version: 6.23.6
 
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2
         with:
           node-version: 16.x
           cache: pnpm
