--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build": "node scripts/build.js",
     "watch": "node scripts/watch.js",
+    "prewatch": "npm run make-package-json",
     "prebuild": "npm run make-package-json",
     "make-package-json": "node scripts/make-package-json.js",
     "update-electron-vendors": "node scripts/update-electron-vendors.js",
