--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "eslint": "^8.4.0",
     "eslint-plugin-import": "^2.25.3",
     "less": "^4.1.2",
+    "less-vars-to-js": "^1.3.0",
     "stylelint": "^14.1.0",
     "stylelint-config-standard": "^24.0.0",
     "stylelint-order": "^5.0.0",
