--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,3 +28,5 @@ jobs:
       - run: npm run compile
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CSC_LINK: ${{ secrets.CSC_LINK }}
+          CSC_KEY_PASSWORD: ${{ secrets.CSC_KEY_PASSWORD }}
