--- a/app/preload/tsconfig.json
+++ b/app/preload/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../../tsconfig.json",
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
@@ -7,5 +7,5 @@
       "/@eventKeys": ["../eventKeys.ts"]
     }
   },
-  "include": ["src/*", "../../../types/**/*.d.ts"]
+  "include": ["src/*", "../../types/**/*.d.ts"]
 }
