--- a/package.json
+++ b/package.json
@@ -3,18 +3,14 @@
   "version": "1.0.4",
   "productName": "PIA Player",
   "description": "Pia戏播放器",
-  "main": "app/packages/main/dist/index.cjs",
+  "main": "app/main/dist/index.cjs",
   "scripts": {
-    "preinstall": "npx -y only-allow pnpm",
-    "build": "node scripts/build.js",
     "watch": "node scripts/watch.js",
-    "prewatch": "npm run buildmake",
-    "prebuild": "npm run buildmake",
-    "buildmake": "node scripts/make-package-json.js && node scripts/licenses.js",
-    "update-electron-vendors": "node scripts/update-electron-vendors.js",
-    "postinstall": "npm run update-electron-vendors",
-    "precompile": "cross-env MODE=production npm run build",
-    "compile": "electron-builder build -mw -c electron-builder.config.js"
+    "build": "node scripts/build.js",
+    "compile": "electron-builder build -mw -c electron-builder.config.js",
+    "postinstall": "node scripts/update-electron-vendors.js",
+    "prebuild": "node scripts/make-package-json.js && node scripts/licenses.js",
+    "precompile": "cross-env MODE=production npm run build"
   },
   "repository": {
     "type": "git",
@@ -46,15 +42,15 @@
     "@guanghechen/postcss-modules-dts": "^1.8.5",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.5.0",
-    "@typescript-eslint/parser": "^5.5.0",
-    "@vitejs/plugin-react": "^1.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.6.0",
+    "@typescript-eslint/parser": "^5.6.0",
+    "@vitejs/plugin-react": "^1.1.1",
     "autoprefixer": "^10.4.0",
     "cross-env": "^7.0.3",
     "electron": "^16.0.4",
     "electron-builder": "^22.14.5",
     "electron-devtools-installer": "^3.2.0",
-    "eslint": "^8.4.0",
+    "eslint": "^8.4.1",
     "eslint-plugin-import": "^2.25.3",
     "less": "^4.1.2",
     "less-vars-to-js": "^1.3.0",
@@ -62,14 +58,14 @@
     "stylelint-config-standard": "^24.0.0",
     "stylelint-order": "^5.0.0",
     "typescript": "^4.5.2",
-    "vite": "^2.6.14"
+    "vite": "^2.7.1"
   },
   "dependencies": {
     "@baranwang/pinyin": "^1.4.0",
     "@ffmpeg/core": "^0.10.0",
     "@ffmpeg/ffmpeg": "^0.10.1",
-    "ahooks": "^2.10.14",
-    "antd": "^4.17.2",
+    "ahooks": "^3.0.0",
+    "antd": "^4.17.3",
     "classnames": "^2.3.1",
     "dexie": "^3.2.0",
     "electron-log": "^4.4.1",
