--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "watch": "node scripts/watch.js",
     "build": "node scripts/build.js",
     "compile": "electron-builder build -mw -c electron-builder.config.js",
+    "compile:dev": "electron-builder build -c electron-builder.config.js",
     "postinstall": "node scripts/update-electron-vendors.js",
     "prebuild": "node scripts/make-package-json.js && node scripts/licenses.js",
-    "precompile": "cross-env MODE=production npm run build"
+    "precompile": "cross-env MODE=production npm run build",
+    "precompile:dev": "cross-env MODE=development npm run build",
+    "lint": "eslint --ext .tsx --fix app"
   },
   "repository": {
     "type": "git",
@@ -54,6 +57,7 @@
     "eslint-plugin-import": "^2.25.3",
     "less": "^4.1.2",
     "less-vars-to-js": "^1.3.0",
+    "rollup-plugin-copy": "^3.4.0",
     "stylelint": "^14.1.0",
     "stylelint-config-standard": "^24.0.0",
     "stylelint-order": "^5.0.0",
@@ -61,13 +65,14 @@
     "vite": "^2.7.1"
   },
   "dependencies": {
-    "@baranwang/pinyin": "^1.4.0",
+    "@baranwang/pinyin": "^1.5.3",
     "@ffmpeg/core": "^0.10.0",
     "@ffmpeg/ffmpeg": "^0.10.1",
     "ahooks": "^3.0.0",
     "antd": "^4.17.3",
     "classnames": "^2.3.1",
     "dexie": "^3.2.0",
+    "electron-acrylic-window": "^0.5.11",
     "electron-log": "^4.4.1",
     "electron-updater": "^4.6.1",
     "mobx": "^6.3.8",
