--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,19 +14,18 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - uses: pnpm/action-setup@v2.0.1
-        with:
-          version: 6.23.6
-
       - uses: actions/setup-node@v2
         with:
           node-version: 16.x
           cache: pnpm
 
-      - run: pnpm install
+      - uses: pnpm/action-setup@v2.0.1
+        with:
+          run_install: true
 
       - run: pnpm run compile
         env:
+          MODE: production
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CSC_LINK: ${{ secrets.CSC_LINK }}
           CSC_KEY_PASSWORD: ${{ secrets.CSC_KEY_PASSWORD }}
