--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,7 @@ jobs:
 
       - uses: pnpm/action-setup@v2.0.1
         with:
+          version: latest
           run_install: true
 
       - run: pnpm run compile
