--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "即兴配音"
   ],
   "author": {
-    "name": "Baran",
+    "name": "WANG BINGHAN",
     "email": "me@baran.wang"
   },
   "license": "MIT",
