--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@guanghechen/postcss-modules-dts": "^1.8.5",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "@types/semver": "^7.3.9",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
     "@vitejs/plugin-react": "^1.1.1",
@@ -76,6 +77,7 @@
     "p-queue": "^7.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-fast-marquee": "^1.2.1"
+    "react-fast-marquee": "^1.2.1",
+    "semver": "^7.3.5"
   }
 }
