--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@douyinfe/semi-ui": "^2.51.3",
     "@tauri-apps/api": "^2.0.0-alpha.13",
+    "@tauri-apps/plugin-http": "^2.0.0-alpha.6",
     "@tauri-apps/plugin-shell": "^2.0.0-alpha.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
