--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "pia-player"
-version = "0.0.0"
-description = "A Tauri App"
-authors = ["you"]
+version = "2.0.0"
+description = "PIA Player"
+authors = ["baran.wang"]
 license = ""
 repository = ""
 edition = "2021"
@@ -16,6 +16,7 @@ tauri-build = { version = "2.0.0-alpha", features = [] }
 tauri = { version = "2.0.0-alpha", features = [] }
 tauri-plugin-shell = "2.0.0-alpha"
 serde_json = "1.0"
+tauri-plugin-http = "2.0.0-alpha.9"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
