--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -3,20 +3,17 @@ name = "pia-player"
 version = "2.0.0"
 description = "PIA Player"
 authors = ["baran.wang"]
-license = ""
-repository = ""
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "2.0.0-alpha", features = [] }
+tauri-build = { version = "2.0.0-beta", features = [] }
 
 [dependencies]
-tauri = { version = "2.0.0-alpha", features = [] }
-tauri-plugin-shell = "2.0.0-alpha"
+tauri = { version = "2.0.0-beta", features = [] }
+tauri-plugin-http = "2.0.0-beta"
 serde_json = "1.0"
-tauri-plugin-http = "2.0.0-alpha.9"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
