--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@douyinfe/semi-ui": "^2.52.3",
     "@modern-js/runtime": "^2.47.0",
     "@tauri-apps/api": "^2.0.0-beta.2",
+    "@tauri-apps/plugin-fs": "^2.0.0-beta.1",
     "@tauri-apps/plugin-http": "^2.0.0-beta.1",
+    "@tauri-apps/plugin-shell": "^2.0.0-beta.1",
     "ahooks": "^3.7.10",
-    "color-diff": "^1.4.0",
+    "howler": "^2.2.4",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -25,10 +28,14 @@
     "@modern-js/eslint-config": "2.47.0",
     "@modern-js/tsconfig": "2.47.0",
     "@tauri-apps/cli": "^2.0.0-beta.3",
-    "@types/color-diff": "^1.2.5",
+    "@types/howler": "^2.2.11",
+    "@types/lodash": "^4.14.202",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "prettier": "~2.8.1",
+    "stylelint": "^16.2.1",
+    "stylelint-config-css-modules": "^4.4.0",
+    "stylelint-config-twbs-bootstrap": "^14.0.0",
     "typescript": "^5.0.2"
   }
 }
