--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "2.0.0",
   "scripts": {
+    "prepare": "tauri icon",
     "dev": "modern dev",
     "build": "modern build",
     "tauri": "tauri"
