--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,6 +16,7 @@ tauri-plugin-shell = "2.0.0-beta"
 tauri-plugin-http = "2.0.0-beta"
 tauri-plugin-fs = "2.0.0-beta"
 serde_json = "1.0"
+pinyin = "0.10"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
