--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "modern dev",
     "build": "modern build",
     "tauri": "tauri",
-    "sync-version": "node sync-version.js"
+    "sync-version": "node sync-version.js",
+    "postversion": "npm run sync-version"
   },
   "dependencies": {
     "@douyinfe/semi-icons": "^2.53.0",
@@ -28,7 +29,7 @@
     "@modern-js/app-tools": "2.47.0",
     "@modern-js/eslint-config": "2.47.0",
     "@modern-js/tsconfig": "2.47.0",
-    "@tauri-apps/cli": "^2.0.0-beta.3",
+    "@tauri-apps/cli": "^2.0.0-beta.5",
     "@types/howler": "^2.2.11",
     "@types/lodash": "^4.14.202",
     "@types/react": "^18.2.15",
